--- a/www/index.html
+++ b/www/index.html
@@ -9,12 +9,12 @@
 <!-- Founded by Inventor Dan Zen - http://danzen.com - Canadian New Media Award Winner  -->
 <!-- ZIM is free to use. You can donate to help improve ZIM at http://zimjs.com/donate  -->
 
-<script src="../Desktop/InteractiveCoding/mobile/imfirst/www/js/createjs_1.1_min.js"></script>
+<script src="js/createjs_1.1_min.js"></script>
 <script>
     var zon = true; // set to false to turn off console messages from zim
     var zns = false; // set to true to require zim namespace - eg. new zim.Frame()
 </script>
-<script src="../Desktop/InteractiveCoding/mobile/imfirst/www/js/zim_6.9.0.js"></script>
+<script src="js/zim_6.9.0.js"></script>
 <!-- use zimjs.com/distill for minified individual functions! -->
 
 <script>
